2005-12-29  Jordi Mallach  <jordi@sindominio.net>

	* ui/main.glade, ui/prefs.glade: Replace "colour" with "color", per
	GNOME guidelines. Fixes #325103.

2005-12-29  Robin Ericsson  <lobbin@localhost.nu>

	* Applied new GtkAboutDialog from Les Harris.

2005-12-29  Robin Ericsson  <lobbin@localhost.nu>

	* src/mud-connection-view.[ch]: Removed use global variables.

2005-12-28  Les Harris  <lescom@comcast.net>

	* Added a hook into MudConnectionView allowing for
	proper handling of connection strings.
	* Added Gnome-Mud window resizing.

2005-12-28  Jordi Mallach  <jordi@sindominio.net>

	* src/gnome-mud.h: Remove duplicate definition of
	remove_whitespace().

2005-12-27  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am (gnome_mud_SOURCES): Embarrasing typo.
	(INCLUDES): define GLADEDIR as $(pkgdatadir), not the local
	source ui/ directory.
	* src/mud-preferences-window.c, src/mud-window-mconnect.c,
	src/mud-window-mudedit.c, src/mud-window-mudlist.c,
	src/mud-window.c: add slashes to all glade file references.

2005-12-26  Les Harris  <lescom@comcast.net>
	
	* Add Mud List support.
	* Add Mud Connection support with data derived from Mud List.
	* ui/main.glade: Split into multiple glade files.

2005-12-20  Les Harris  <lescom@comcast.net>

	* Removed duplicate code that caused a crash on connect.

2005-09-14  Jordi Mallach  <jordi@sindominio.net>

	* Merge gnome-mud-glade-branch to HEAD.
	* Forwardport missing bits from gnome-mud 0.10.x.
	* Old branch is now gnome-mud-0-10.

2005-09-01  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.ac: Added ne in ALL_LINGUAS

2005-08-02  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.in: Added "uk" to ALL_LINGUAS.

2005-05-16  Jordi Mallach  <jordi@sindominio.net>

	* src/directions.c (directions_window_ok_cb): Fix typo which
	would prevent directional keys from being saved correctly
	(fixes #304050).

2005-05-10  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): Get rid of